<resources>
    <string name="app_name">DrawingApp</string>
    <string name="click_to_draw">Click to Draw</string>
    <string name="pen_action_button">Pen Action Button</string>
    <string name="color_action_button">Color Action Button</string>
    <string name="stroke_width_action_button">Stroke Width Action Button</string>
    <string name="circle_action_button">Circle Action Button</string>
    <string name="square_action_button">Square Action Button</string>
    <string name="drawsome">DRAWSOME</string>
    <string name="an_app_by_majorhotties">An app by MajorHotties</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
</resources>