...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/penActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/pen_action_button"
        android:enabled="true"
        android:focusable="true"
...
        android:focusable="true"
        android:src="@drawable/baseline_line_weight_24"
        app:backgroundTint="@color/gray_400"
        app:fabSize="auto"
        app:layout_constraintBottom_toTopOf="@+id/strokeSlider"
        app:layout_constraintEnd_toStartOf="@+id/squareActionButton"
        app:layout_constraintStart_toEndOf="@+id/colorActionButton"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="32dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/colorActionButton"
        android:layout_width="wrap_content"
...
